# econ-capital-engine

./: .gitignore  LIMITATIONS.md  Makefile  README.md  pyproject.toml  run_all.py
data/processed/: cat_catalog.csv
docs/: methodology.md  results.md
scripts/: build_cat_catalog.py
src/: aggregation.py  capital.py  catastrophe.py  credit.py  market.py  utils.py
tests/: test_aggregation.py  test_capital.py  test_catastrophe.py  test_credit.py  test_market.py
